--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
 	<!-- end of navbar -->
 	<!-- start of landing section -->
 	<div id="landing-section" class="d-flex flex-column justify-content-center p-5">
-		<div class="m-auto">
-			<h1>Friends don't let friends use <a href="#intro-section" id="comic-sans">Comic Sans</a> ...</h1>
+		<div class="mx-auto pt-5">
+			<h1>Friends don't let friends use <a href="#intro-section" id="comic-sans">Comic Sans</a></h1>
 		</div>
-		<div class="text-center">
+		<div class="text-center mt-5">
 			<a href="#intro-section"><p class="btn btn-lg btn-light">Let me help you <i class="fas fa-caret-down"></i></p></a>
 		</div>
 		
 	</div>
 	<!-- end of landing section -->
 	<!-- start of introduction -->
-	<div id="intro-section" class="container text-center my-5">
+	<div id="intro-section" class="container text-center py-5 my-5">
 		<img src="./images/profile.jpg" class="rounded-circle mt-5">
 		<h1 class="my-4">Hi, I'm <span>Efren</span>!</h1>
 		<p>I'm a Full-Stack Web Developer equipped to provide smart solutions for the specific needs of your business. I'm a partner you can trust to design the face of your organization over the web.</p>
@@ -91,8 +91,8 @@
 	</div>
 	<!-- end of introduction -->
 	<!-- start of projects -->
-	<div id="project-section" class="py-5 px-5 text-light">
-		<div class="container">
+	<div id="project-section" class="py-5 my-5 text-light">
+		<div class="container py-5">
 			<h3 class="text-center pb-5">Projects I've worked on</h3>
 			<div class="row">
 				<div class="col-md-6">
@@ -131,7 +131,7 @@
 	</div>
 	<!-- end of projects -->
 	<!-- start of tools -->
-	<div class="container pt-3" id="tools-section">
+	<div class="container py-5 my-5" id="tools-section">
 		<h3 class="text-center mt-5">Core Tools</h3>
 		<div class="d-flex flex-row justify-content-center pt-2">
 			<img src="./images/logo-html5.png" class="img-fluid">
@@ -154,7 +154,7 @@
 	</div>
 	<!-- end of other tools -->
 	<!-- start of contact -->
-	<div id="contact-section" class="text-black">
+	<div id="contact-section" class="text-black py-5">
 		<div class="container pb-5">
 			<div class=" row mt-5">
 				<div class="col-md-6 p-4">
