includes revision of spacing of landing page

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 	<!-- end of navbar -->
 	<!-- start of landing section -->
 	<div id="landing-section" class="d-flex flex-column justify-content-center p-5">
-		<div class="mx-auto pt-5">
+		<div class="mx-auto">
 			<h1>Friends don't let friends use <a href="#intro-section" id="comic-sans">Comic Sans</a></h1>
 		</div>
-		<div class="text-center mt-5">
+		<div class="text-center mt-3">
 			<a href="#intro-section"><p class="btn btn-lg btn-light">Let me help you <i class="fas fa-caret-down"></i></p></a>
 		</div>
 		
