updated social icons

--- a/index.html
+++ b/index.html
@@ -74,12 +74,18 @@
 		<p>I'm a Full-Stack Web Developer equipped to provide smart solutions for the specific needs of your business. I'm a partner you can trust to design the face of your organization over the web.</p>
 		<p>A community image that is clear, one that lasts, and most especially -- <span>yours</span>!</p>
 		<div class="d-flex justify-content-center">
-			<a href="https://www.facebook.com/efrenrodriguezjr/" target="_blank" class="mx-4">
-				<i class="fab fa-facebook-square"></i>
+			<a href="https://twitter.com/efrenrodriguez" target="_blank" class="mx-4">
+				<i class="fab fa-twitter"></i>
 			</a>
+			<!-- <a href="https://www.facebook.com/efrenrodriguezjr/" target="_blank" class="mx-4">
+				<i class="fab fa-facebook-square"></i>
+			</a> -->
 			<a href="https://www.linkedin.com/in/efren-jr-rodriguez
 " target="_blank" class="mx-4">
 				<i class="fab fa-linkedin"></i>
+			</a>
+			<a href="https://github.com/efrenjr-dev" target="_blank" class="mx-4">
+				<i class="fab fa-github"></i>
 			</a>
 			<a href="https://gitlab.com/efrenjr-dev" target="_blank" class="mx-4">
 				<i class="fab fa-gitlab"></i>
@@ -196,12 +202,18 @@
 				<a href="#" class="btn btn-outline-light btn-sm mb-4">Go to Top of Page <i class="fas fa-level-up-alt"></i></a>
 			</div>
 			<div class="d-flex justify-content-center">
-			<a href="https://www.facebook.com/efrenrodriguezjr/" target="_blank" class="mx-4">
-				<i class="fab fa-facebook-square"></i>
+				<a href="https://twitter.com/efrenrodriguez" target="_blank" class="mx-4">
+				<i class="fab fa-twitter"></i>
 			</a>
+			<!-- <a href="https://www.facebook.com/efrenrodriguezjr/" target="_blank" class="mx-4">
+				<i class="fab fa-facebook-square"></i>
+			</a> -->
 			<a href="https://www.linkedin.com/in/efren-jr-rodriguez
 " target="_blank" class="mx-4">
 				<i class="fab fa-linkedin"></i>
+			</a>
+			<a href="https://github.com/efrenjr-dev" target="_blank" class="mx-4">
+				<i class="fab fa-github"></i>
 			</a>
 			<a href="https://gitlab.com/efrenjr-dev" target="_blank" class="mx-4">
 				<i class="fab fa-gitlab"></i>
