update ecommerce links

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 			<h3 class="text-center pb-5">Projects I've worked on</h3>
 			<div class="row">
 				<div class="col-md-6">
-					<h4>Ecommerce (MERN Stack)</h4>
-					<p>Developed an e-commerce web-app built with MERN stack (MongoDB, Express.js, React.js and Node.js) as a capstone project at the Zuitt Coding Bootcamp. This is a completely functional web-app where one can visit, register, purchase and make a transaction with demo products.</p>
-					<p>You may review my code on my <a href="https://gitlab.com/efrenjr-dev" target="_blank" class="text-light">Gitlab page</a>.</p>
+					<h4>Checkpoint - ECommerce (MERN Stack)</h4>
+					<p>Developed an e-commerce web-app built with MERN stack (MongoDB, Express.js, React.js and Node.js) as a capstone project at the Zuitt Coding Bootcamp. This is a completely functional web-app where one can <a href="https://checkpoint.vercel.app/" target="_blank" class="text-light">visit</a>, register, purchase and make a transaction with demo products.</p>
+					<p>You may review my code on my <a href="https://gitlab.com/efrenjr-dev/checkpoint" target="_blank" class="text-light">Gitlab page</a>.</p>
 					<div class="d-flex flex-row flex-wrap justify-content-start pt-2 mb-4" id="mern-icon">
 						<img src="./images/logo-mongodb.png" class="img-fluid">
 						<img src="./images/logo-expressjs.png" class="img-fluid">
