--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>ERJ</title>
+	<title>Efren Rodriguez - Full Stack Web Developer</title>
 	<!-- bootstrap css -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 	<!-- google fonts here -->
@@ -113,7 +113,8 @@
 					</div>
 				</div>
 				<div class="col-md-6">
-					<img src="https://images.pexels.com/photos/6969649/pexels-photo-6969649.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="img-fluid">
+					<img src="./images/checkpoint.jpg" class="img-fluid">
+					<!-- img src="https://images.pexels.com/photos/6969649/pexels-photo-6969649.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="img-fluid"> -->
 					<!-- <img src="https://images.pexels.com/photos/4482900/pexels-photo-4482900.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" class="img-fluid"> -->
 				</div>
 			</div>
