--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					</div>
 				</div>
 				<div class="col-md-6">
-					<img src="./images/checkpoint.jpg" class="img-fluid">
+					<img src="./images/checkpoint.JPG" class="img-fluid">
 					<!-- img src="https://images.pexels.com/photos/6969649/pexels-photo-6969649.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="img-fluid"> -->
 					<!-- <img src="https://images.pexels.com/photos/4482900/pexels-photo-4482900.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" class="img-fluid"> -->
 				</div>
