--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         A community image that is clear, one that lasts, and most especially --
         <span>yours</span>!
       </p>
-      <div class="d-flex flex-row flex-wrap justify-content-center">
+      <div class="pt-3 d-flex flex-row flex-wrap justify-content-center">
         <a
           href="https://twitter.com/efrenrodriguez"
           target="_blank"
