--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
     <!-- aos -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- external css -->
     <link rel="stylesheet" type="text/css" href="./index.css" />
   </head>
@@ -83,16 +83,20 @@
       id="landing-section"
       class="d-flex flex-column justify-content-center p-5"
     >
-      <div id="large-landing" class="d-none d-sm-block ">
+      <div id="large-landing" class="d-none d-sm-block">
         <div class="mx-auto text-center">
           <h1>
             Friends don't let friends use
-            <a href="#intro-section" id="comic-sans">Comic Sans</a>
+            <a href="#" id="comic-sans">Comic Sans</a>
           </h1>
         </div>
         <div class="text-center mt-3">
           <a href="#intro-section"
-            ><p class="btn btn-lg btn-light" data-aos="fade-up" data-aos-delay="1500">
+            ><p
+              class="btn btn-lg btn-light"
+              data-aos="fade-up"
+              data-aos-delay="1500"
+            >
               Let me help you <i class="fas fa-caret-down"></i></p
           ></a>
         </div>
@@ -106,71 +110,100 @@
         </div>
         <div class="text-center mt-3">
           <a href="#intro-section"
-            ><p class="btn btn-lg btn-light" data-aos="fade-up" data-aos-delay="1500">
+            ><p
+              class="btn btn-lg btn-light"
+              data-aos="fade-up"
+              data-aos-delay="1500"
+            >
               Let me help you <i class="fas fa-caret-down"></i></p
           ></a>
         </div>
       </div>
-
     </div>
     <!-- end of landing section -->
     <!-- start of introduction -->
-    <div id="intro-section" class="container text-center py-5 my-5">
-      <img src="./images/profile.jpg" class="rounded-circle mt-5" data-aos="fade-up"/>
-      <h1 class="my-4" data-aos="fade-up">Hi, I'm <span>Efren</span>!</h1>
-      <p data-aos="fade-up" data-aos-delay="">
-        I'm a Full-Stack Web Developer equipped to provide smart solutions for
-        the specific needs of your business. I'm a partner you can trust to
-        design the face of your organization over the web.
-      </p>
-      <p data-aos="fade-up" data-aos-delay="">
-        A community image that is clear, one that lasts, and most especially --
-        <span>yours</span>!
-      </p>
-      <div class="pt-3 d-flex flex-row flex-wrap justify-content-center" data-aos="fade-up" data-aos-delay="">
-        <a
-          href="https://twitter.com/efrenrodriguez"
-          target="_blank"
-          class="mx-2 mx-sm-3 mx-md-4"
-        >
-          <i class="fab fa-twitter"></i>
-        </a>
-        <!-- <a href="https://www.facebook.com/efrenrodriguezjr/" target="_blank" class="mx-4">
+    <div id="intro-section" class="container py-5">
+      <div class="row text-center px-md-5 text-center justify-content-center">
+        <div class="col col-md-7">
+          <img
+            src="./images/profile.jpg"
+            class="rounded-circle mt-5"
+            data-aos="fade-up"
+          />
+          <h1 class="my-4" data-aos="fade-up">Hi, I'm <span>Efren</span>!</h1>
+          <p data-aos="fade-up">
+            I'm a Full-Stack Web Developer equipped to provide smart solutions
+            for the specific needs of your business. I'm a partner you can trust
+            to design the face of your organization over the web.
+          </p>
+          <p data-aos="fade-up">
+            A community image that is clear, one that lasts, and most especially
+            --
+            <span>yours</span>!
+          </p>
+          <p data-aos="fade-up">I've completed an immersive <a target="_blank" href="http://share.zertify.zuitt.co/certificate/8bb0ffc7-f22b-43a9-8406-375fbd073342/">bootcamp</a> in full-stack web development and trained in Node.js, Express, and React. My goal is to obtain an entry-level full-stack software engineering position.</p>
+          <div
+            class="pt-3 d-flex flex-row flex-wrap justify-content-center"
+            data-aos="fade-up"
+           
+          >
+            <a
+              href="https://twitter.com/efrenrodriguez"
+              target="_blank"
+              class="mx-2 mx-sm-3 mx-md-4"
+            >
+              <i class="fab fa-twitter"></i>
+            </a>
+            <!-- <a href="https://www.facebook.com/efrenrodriguezjr/" target="_blank" class="mx-4">
 				<i class="fab fa-facebook-square"></i>
 			</a> -->
-        <a
-          href="https://www.linkedin.com/in/efren-jr-rodriguez
-"
-          target="_blank"
-          class="mx-2 mx-sm-3 mx-md-4"
-        >
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="https://github.com/efrenjr-dev" target="_blank" class="mx-2 mx-sm-3 mx-md-4">
-          <i class="fab fa-github"></i>
-        </a>
-        <a href="https://gitlab.com/efrenjr-dev" target="_blank" class="mx-2 mx-sm-3 mx-md-4">
-          <i class="fab fa-gitlab"></i>
-        </a>
-        <a
-          href="https://www.instagram.com/what.the.ef.g/"
-          target="_blank"
-          class="mx-2 mx-sm-3 mx-md-4"
-        >
-          <i class="fab fa-instagram"></i>
-        </a>
-      </div>
-      <div data-aos="fade-up" data-aos-delay="">
-        <a target="_blank" href="https://www.dropbox.com/s/j8hhuadmyv5iw2k/Rodriguez%20Efren%20Jr%20%20D%20-%20CURRICULUM%20VITAE.pdf?dl=0" class="btn btn-secondary btn-sm mt-4"
-            >Download CV <i class="far fa-file"></i>
-          </a>
+            <a
+              href="https://www.linkedin.com/in/efren-jr-rodriguez"
+              target="_blank"
+              class="mx-2 mx-sm-3 mx-md-4"
+            >
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a
+              href="https://github.com/efrenjr-dev"
+              target="_blank"
+              class="mx-2 mx-sm-3 mx-md-4"
+            >
+              <i class="fab fa-github"></i>
+            </a>
+            <a
+              href="https://gitlab.com/efrenjr-dev"
+              target="_blank"
+              class="mx-2 mx-sm-3 mx-md-4"
+            >
+              <i class="fab fa-gitlab"></i>
+            </a>
+            <a
+              href="https://www.instagram.com/what.the.ef.g/"
+              target="_blank"
+              class="mx-2 mx-sm-3 mx-md-4"
+            >
+              <i class="fab fa-instagram"></i>
+            </a>
+          </div>
+          <div data-aos="fade-up">
+            <a
+              target="_blank"
+              href="https://www.dropbox.com/s/j8hhuadmyv5iw2k/Rodriguez%20Efren%20Jr%20%20D%20-%20CURRICULUM%20VITAE.pdf?dl=0"
+              class="btn btn-secondary btn-sm mt-4"
+              >Download CV <i class="far fa-file"></i>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
     <!-- end of introduction -->
     <!-- start of projects -->
     <div id="project-section" class="py-5 my-5 text-light">
       <div class="container py-5">
-        <h3 class="text-center pb-5" data-aos="fade-up">Projects I've worked on</h3>
+        <h3 class="text-center pb-5" data-aos="fade-up">
+          Projects I've worked on
+        </h3>
         <div class="row">
           <div class="col-md-6" data-aos="fade-up">
             <h4>Checkpoint - ECommerce (MERN Stack)</h4>
@@ -256,14 +289,20 @@
     <!-- start of tools -->
     <div class="container py-5 my-5" id="tools-section">
       <h3 class="text-center mt-5" data-aos="fade-up">Core Tools</h3>
-      <div class="d-flex flex-row justify-content-center pt-2" data-aos="fade-up">
+      <div
+        class="d-flex flex-row justify-content-center pt-2"
+        data-aos="fade-up"
+      >
         <img src="./images/logo-html5.png" class="img-fluid" />
         <img src="./images/logo-css3.png" class="img-fluid" />
         <img src="./images/logo-javascript.png" class="img-fluid" />
       </div>
       <!-- Other Tools -->
       <h3 class="text-center mt-5" data-aos="fade-up">Other Tools</h3>
-      <div class="d-flex flex-row flex-wrap justify-content-center pt-2" data-aos="fade-up">
+      <div
+        class="d-flex flex-row flex-wrap justify-content-center pt-2"
+        data-aos="fade-up"
+      >
         <img src="./images/logo-mongodb.png" class="img-fluid" />
         <img src="./images/logo-nodejs.png" class="img-fluid" />
         <img src="./images/logo-expressjs.png" class="img-fluid" />
@@ -299,7 +338,7 @@
           </div>
           <div class="col-md-6 p-4" data-aos="fade-up">
             <h3 class="text-center mb-3">Get in touch</h3>
-            <div class="d-flex  flex-row flex-wrap justify-content-center">
+            <div class="d-flex flex-row flex-wrap justify-content-center">
               <a
                 href="https://twitter.com/efrenrodriguez"
                 target="_blank"
@@ -315,10 +354,18 @@
               >
                 <i class="fab fa-linkedin"></i>
               </a>
-              <a href="https://github.com/efrenjr-dev" target="_blank" class="mx-2 mx-lg-4">
+              <a
+                href="https://github.com/efrenjr-dev"
+                target="_blank"
+                class="mx-2 mx-lg-4"
+              >
                 <i class="fab fa-github"></i>
               </a>
-              <a href="https://gitlab.com/efrenjr-dev" target="_blank" class="mx-2 mx-lg-4">
+              <a
+                href="https://gitlab.com/efrenjr-dev"
+                target="_blank"
+                class="mx-2 mx-lg-4"
+              >
                 <i class="fab fa-gitlab"></i>
               </a>
               <a
@@ -385,7 +432,7 @@
     <!-- start of footer -->
     <footer class="pt-3 bg-dark text-secondary">
       <div class="d-flex flex-column align-items-center">
-        <div div class="p-3">
+        <div class="p-3">
           <a href="#" class="btn btn-outline-light btn-sm mb-4"
             >Go to Top of Page <i class="fas fa-level-up-alt"></i
           ></a>
@@ -406,10 +453,18 @@
           >
             <i class="fab fa-linkedin"></i>
           </a>
-          <a href="https://github.com/efrenjr-dev" target="_blank" class="mx-2 mx-sm-3 mx-md-4">
+          <a
+            href="https://github.com/efrenjr-dev"
+            target="_blank"
+            class="mx-2 mx-sm-3 mx-md-4"
+          >
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://gitlab.com/efrenjr-dev" target="_blank" class="mx-2 mx-sm-3 mx-md-4">
+          <a
+            href="https://gitlab.com/efrenjr-dev"
+            target="_blank"
+            class="mx-2 mx-sm-3 mx-md-4"
+          >
             <i class="fab fa-gitlab"></i>
           </a>
           <a
@@ -421,9 +476,12 @@
           </a>
         </div>
         <div>
-          <a target="_blank" href="https://www.dropbox.com/s/j8hhuadmyv5iw2k/Rodriguez%20Efren%20Jr%20%20D%20-%20CURRICULUM%20VITAE.pdf?dl=0" class="btn btn-secondary btn-sm mt-4"
-              >Download CV <i class="far fa-file"></i>
-            </a>
+          <a
+            target="_blank"
+            href="https://www.dropbox.com/s/j8hhuadmyv5iw2k/Rodriguez%20Efren%20Jr%20%20D%20-%20CURRICULUM%20VITAE.pdf?dl=0"
+            class="btn btn-secondary btn-sm mt-4"
+            >Download CV <i class="far fa-file"></i>
+          </a>
         </div>
         <!-- <div class="p-3 text-center">
           This website is for educational purposes only.
