updated aboutme width and footer content

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- start of introduction -->
     <div id="intro-section" class="container py-5">
       <div class="row text-center px-md-5 text-center justify-content-center">
-        <div class="col col-md-7">
+        <div class="col col-md-8">
           <img
             src="./images/profile.jpg"
             class="rounded-circle mt-5"
@@ -475,19 +475,14 @@
             <i class="fab fa-instagram"></i>
           </a>
         </div>
-        <div>
-          <a
-            target="_blank"
-            href="https://www.dropbox.com/s/j8hhuadmyv5iw2k/Rodriguez%20Efren%20Jr%20%20D%20-%20CURRICULUM%20VITAE.pdf?dl=0"
-            class="btn btn-secondary btn-sm mt-4"
-            >Download CV <i class="far fa-file"></i>
-          </a>
-        </div>
         <!-- <div class="p-3 text-center">
           This website is for educational purposes only.
         </div> -->
         <div id="logo" class="pt-5">ERJ</div>
-        <div class="pb-2">&copy; Efren Rodriguez Jr. 2021</div>
+        <div class="pb-2">This website has been created using Bootstrap 4. | &copy; Efren Rodriguez Jr. 2021</div>
+        <!-- <div class="">
+          This website has been created using Bootstrap 4.
+        </div> -->
       </div>
     </footer>
     <!-- end of footer -->
