--- a/index.html
+++ b/index.html
@@ -141,11 +141,20 @@
             --
             <span>yours</span>!
           </p>
-          <p data-aos="fade-up">I've completed an immersive <a target="_blank" href="http://share.zertify.zuitt.co/certificate/8bb0ffc7-f22b-43a9-8406-375fbd073342/">bootcamp</a> in full-stack web development and trained in Node.js, Express, and React. My goal is to obtain an entry-level full-stack software engineering position.</p>
+          <p data-aos="fade-up">
+            I've completed an immersive
+            <a
+              target="_blank"
+              href="http://share.zertify.zuitt.co/certificate/8bb0ffc7-f22b-43a9-8406-375fbd073342/"
+              >bootcamp</a
+            >
+            in full-stack web development and trained in Node.js, Express, and
+            React. My goal is to obtain an entry-level full-stack software
+            engineering position.
+          </p>
           <div
             class="pt-3 d-flex flex-row flex-wrap justify-content-center"
             data-aos="fade-up"
-           
           >
             <a
               href="https://twitter.com/efrenrodriguez"
@@ -376,54 +385,58 @@
                 <i class="fab fa-instagram"></i>
               </a>
             </div>
-            <form>
-              <div class="form-group pt-3">
-                <label for="email-input">Email Address:</label>
-                <input
-                  type="email"
-                  name="emailInput"
-                  id="email-input"
-                  placeholder=""
-                  class="form-control"
-                />
-              </div>
-              <div class="form-group">
-                <label for="name-input">Name:</label>
-                <input
-                  type="email"
-                  name="nameInput"
-                  id="name-input"
-                  placeholder=""
-                  class="form-control"
-                />
-              </div>
-              <div class="form-group">
-                <label for="category-select">Category:</label>
-                <select
-                  class="form-control"
-                  id="category-select"
-                  name="categorySelect"
-                >
-                  <option>Web Development and Design</option>
-                  <option>Content Creation</option>
-                  <option>Job Opportunity</option>
-                  <option>Consultation</option>
-                  <option>General Inquiry</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="message-input">Message:</label>
-                <textarea
-                  id="message-input"
-                  name="messageInput"
-                  class="form-control"
-                  placeholder="Let me know how I can help!"
-                  rows="4"
-                ></textarea>
-              </div>
-              <button type="submit" class="btn btn-secondary">Submit</button>
-              <button type="reset" class="btn btn-light">Reset</button>
-            </form>
+            <div class="form-group pt-3">
+              <label for="email-input">Email Address:</label>
+              <input
+                type="email"
+                name="emailInput"
+                id="email-input"
+                placeholder=""
+                class="form-control"
+              />
+            </div>
+            <div class="form-group">
+              <label for="name-input">Name:</label>
+              <input
+                type="text"
+                name="nameInput"
+                id="name-input"
+                placeholder=""
+                class="form-control"
+              />
+            </div>
+            <div class="form-group">
+              <label for="category-select">Category:</label>
+              <select
+                class="form-control"
+                id="category-select"
+                name="categorySelect"
+              >
+                <option>Web Development and Design</option>
+                <option>Content Creation</option>
+                <option>Job Opportunity</option>
+                <option>Consultation</option>
+                <option>General Inquiry</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="message-input">Message:</label>
+              <textarea
+                id="message-input"
+                name="messageInput"
+                class="form-control"
+                placeholder="Let me know how I can help!"
+                rows="4"
+              ></textarea>
+            </div>
+            <button
+              type="submit"
+              class="btn btn-secondary"
+              onclick="sendEmail()"
+            >
+              Submit
+            </button>
+            <button type="reset" class="btn btn-light">Reset</button>
           </div>
         </div>
       </div>
@@ -479,7 +492,10 @@
           This website is for educational purposes only.
         </div> -->
         <div id="logo" class="pt-5">ERJ</div>
-        <div class="pb-2">This website has been created using Bootstrap 4. | &copy; Efren Rodriguez Jr. 2021</div>
+        <div class="pb-2">
+          This website has been created using Bootstrap 4. | &copy; Efren
+          Rodriguez Jr. 2021
+        </div>
         <!-- <div class="">
           This website has been created using Bootstrap 4.
         </div> -->
@@ -498,15 +514,18 @@
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
       crossorigin="anonymous"
     ></script>
-    <!-- fontawesome -->
-    <script
-      src="https://kit.fontawesome.com/b73daadc47.js"
-      crossorigin="anonymous"
-    ></script>
     <!-- aos -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
+    <!-- fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/b73daadc47.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- smtpJS -->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script type="text/javascript" src="./email.js"></script>
   </body>
 </html>
