email form validation

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                 type="email"
                 name="emailInput"
                 id="email-input"
-                placeholder=""
+                placeholder="username@domain.com"
                 class="form-control"
               />
             </div>
