update checkpoint repo link

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         <p>
                             You may review my code on my
                             <a
-                                href="https://gitlab.com/efrenjr-dev/checkpoint"
+                                href="https://github.com/efrenjr-dev/Checkpoint-Ecommerce"
                                 target="_blank"
                                 class="text-light"
                                 >Gitlab page</a
