--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                                 href="https://github.com/efrenjr-dev/Checkpoint-Ecommerce"
                                 target="_blank"
                                 class="text-light"
-                                >Gitlab page</a
+                                >Github page</a
                             >.
                         </p>
                         <div
@@ -366,14 +366,14 @@
                     <div class="col-md-6 p-4" data-aos="fade-up">
                         <h3 class="text-center mb-3">Find Me</h3>
                         <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30923.478013392847!2d120.95902396199422!3d14.344233657460835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397d4202af95fbb%3A0x9281647cdf10570f!2sSalawag%2C%20Cavite!5e0!3m2!1sen!2sph!4v1729058233305!5m2!1sen!2sph"
                             width="500"
                             height="500"
                             id="gmap_canvas"
-                            src="https://maps.google.com/maps?q=olaya,%20riyadh&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                            frameborder="0"
-                            scrolling="no"
-                            marginheight="0"
-                            marginwidth="0"
+                            style="border: 0"
+                            allowfullscreen=""
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"
                         ></iframe>
                     </div>
                     <div class="col-md-6 p-4" data-aos="fade-up">
